--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,16 @@
   "homepage": "https://github.com/lemonspb/notes#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "envalid": "^7.3.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
+  },
+  "_moduleAliases": {
+    "@": "src"
   }
 }
