--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ts",
+  "name": "infosensor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,14 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.23",
+    "@types/node": "^18.11.8",
+    "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
-    "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
   }
