--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
