--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.6",
+    "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/header": "^2.6.2",
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/editorjs__header": "^2.6.0",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
