--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/lemonspb/notes#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
