--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/lemonspb/notes#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "shortid": "^2.2.16",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.0",
     "nodemailer": "^6.8.0"
