--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@editorjs/editorjs": "^2.25.0",
     "@editorjs/header": "^2.6.2",
     "@reduxjs/toolkit": "^1.9.0",
+    "@types/classnames": "^2.3.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
