--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@editorjs/editorjs": "^2.25.0",
     "@editorjs/header": "^2.6.2",
+    "@editorjs/list": "^1.7.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/classnames": "^2.3.1",
     "@types/react-router-dom": "^5.3.3",
@@ -24,6 +25,7 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@editorjs/checklist": "^1.3.0",
     "@types/editorjs__header": "^2.6.0",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.22",
