--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@editorjs/checklist": "^1.3.0",
@@ -30,6 +32,7 @@
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
