сделана навигация а так же доделана верификация

--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.39.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
+    "react-toastify": "^9.1.1",
     "sass": "^1.55.0",
     "uuid": "^9.0.0"
   },
