--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "jest --forceExit --detectOpenHandles"
   },
@@ -27,6 +27,7 @@
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.0",
